force-app/main/default/objects/adobesign__Document_Job_Status__c/fields/adobesign__Current_Step__c.field-meta.xml
<CustomField>
    <fullName>adobesign__Current_Step__c</fullName>
    <description>The current step in the document generation operation.</description>
    <inlineHelpText>The current step in the document generation operation.</inlineHelpText>
    <label>Job Step</label>
    <length>64</length>
    <type>Text</type>
</CustomField>