force-app/main/default/objects/adobesign__Document_Job_Status__c/fields/adobesign__DownloadUri__c.field-meta.xml
<CustomField>
    <fullName>adobesign__DownloadUri__c</fullName>
    <description>The URL used to upload the Resource directly to the cloud provider.</description>
    <inlineHelpText>The URL used to upload the Resource directly to the cloud provider.</inlineHelpText>
    <label>Download Uri</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>