force-app/main/default/objects/adobesign__Document_Job_Status__c/fields/adobesign__Polling_Number__c.field-meta.xml
<CustomField>
    <fullName>adobesign__Polling_Number__c</fullName>
    <description>The number of callout for polling document generation job status</description>
    <inlineHelpText>The number of callout for polling document generation job status</inlineHelpText>
    <label>Polling Number</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>