force-app/main/default/objects/adobesign__Document_Job_Status__c/fields/adobesign__Request_Id__c.field-meta.xml
<CustomField>
    <fullName>adobesign__Request_Id__c</fullName>
    <description>Job request id</description>
    <inlineHelpText>Job request id</inlineHelpText>
    <label>Request Id</label>
    <length>64</length>
    <type>Text</type>
</CustomField>