force-app/main/default/objects/adobesign__Document_Job_Status__c/fields/adobesign__Status_Code__c.field-meta.xml
<CustomField>
    <fullName>adobesign__Status_Code__c</fullName>
    <description>Status code of document generation job</description>
    <inlineHelpText>Status code of document generation job</inlineHelpText>
    <label>Status Code</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>