force-app/main/default/objects/adobesign__Document_Job_Status__c/fields/adobesign__UploadUri__c.field-meta.xml
<CustomField>
    <fullName>adobesign__UploadUri__c</fullName>
    <description>The URL used to download the Resource directly from the cloud provider.</description>
    <inlineHelpText>The URL used to download the Resource directly from the cloud provider.</inlineHelpText>
    <label>Upload Uri</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>